--- a/index.html
+++ b/index.html
@@ -1,30 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Server Test</title>
 </head>
+
 <body>
     <div class="test">
-        <h1>Hello from the server</h1>
+        HELLO FROM SERVER
     </div>
+    <img class="img" src="com.jpg" alt="Flowers in Chania" width="500" height="500">
+    <form action="" method="post">
+        <button name="foo" value="upvote">Upvote</button>
+    </form>
     <style>
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap');
         .test {
-            background-color: seagreen;
-        }
-        h1 {
-            color: red;
+            /* background-color: dodgerblue; */
+            display:flex;
+            justify-content: center;
+            align-items: center;
+            color: black;
             font-size: 60px;
-            display: flex;
-            padding: 5px 10px;
+            font-family: 'Roboto', sans-serif;
+            border-radius: 10px;
         }
-        .test:hover, h1:hover
-        {
-            background-color: sienna;
-            color : white;
+
+
+        .img{
+            border-radius: 50%;
+        }
+        .test:hover{
+            background-color: rgb(26, 129, 231);
+            color: white;
+        }
+        body{
+            margin: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+            gap: 20px;
         }
     </style>
 </body>
+
 </html>
