--- a/src/files/errors/404.html
+++ b/src/files/errors/404.html
@@ -1,30 +1,37 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <style>
-        #error-404 {
-            background-color: aquamarine;
-            opacity: 0.8;
-            margin-top: 100px;
-            margin: 200px 200px;
-            padding: 20px;
-            border: 5px rgb(255, 0, 0) solid;
+<html>
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Error</title>
+        <style>
+        body {
+            background-color: rgba(0, 0, 0, 0.119);
+        }
+        .container {
+            margin: 10%;
+            text-align: center;
+            color: rgba(250, 52, 52, 0.708);
         }
         h1 {
-            font-size: 200px;
-            color: gray
+            font-size: 14rem;
+            font-family: "Courier New", Courier, monospace;
+            font-weight: bold;
+            margin:-5rem 0 0 0;
         }
-    </style>
-</head>
-<body>
-    <div id="error-404">
-        <center>
-            <h1>ERROR 404</h1>
-        </center>
-    </div>
-</body>
-</html>
+        .parag {
+            margin:0;
+            font-weight: bold;
+            font-size: 5rem;
+            font-family: "Courier New", Courier, monospace;
+        }
+        </style>
+    </head>
+    <body>
+        <div class="container">
+        <h1>404</h1>
+        <p class="parag">NOT FOUND</p>
+        </div>
+    </body>
+</html>";
