--- a/root/htm_pages/index.html
+++ b/root/htm_pages/index.html
@@ -12,7 +12,7 @@
     <div class="test">
         HELLO FROM SERVER
     </div>
-    <img class="img" src="com.jpg" alt="Flowers in Chania" width="500" height="500">
+    <img class="img" src="images/com.jpg" alt="Flowers in Chania" width="500" height="500">
     <form action="" method="post">
         <button name="foo" value="upvote">Upvote</button>
     </form>
