--- a/root/Default/default.html
+++ b/root/Default/default.html
@@ -1,17 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>webserv</title>
+    <title>Default</title>
 </head>
-
 <body>
-    <center>
-        <h1 style="font-size: 100px; color: aqua; border: 2px solid black; border-radius: 5px;">Welcome to webserv</h1>
-    <center>
+    <h1>Welcome to webserv</h1>
 </body>
-
 </html>
