--- a/root/html_pages/simple.html
+++ b/root/html_pages/simple.html
@@ -5,11 +5,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Server Test</title>
+    <title>Server</title>
 </head>
 
 <body>
-    <h1 style="font-size: 100px; color: aqua;">Hello From the Default Page Of our WebServ</h1>
+    <center>
+        <h1 style="font-size: 100px; color: salmon; border: 2px solid black; border-radius: 5px;">Hello From the Server</h1>
+    </center>
 </body>
 
 </html>
